<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Water Maze</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_watermaze_main_layout">Water Maze</string>
    <string name="title_control">Control</string>
    <string name="title_results">Results</string>
    <string name="title_connectivity">Connectivity</string>
    
    <!-- control -->
    <string name="load_geometry">Load Geometry</string>
    <string name="next_paradigm">Next Paradigm</string>
	<string name="prev_paradigm">Previous Paradigm</string>
	<string name="play">Play</string>
	<string name="pause">Pause</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="next_trial">Next Trial</string>
	<string name="add_trial">Add Trial</string>
	<string name="new_subject">New Subject</string>
	<string name="new_subject_submit">Submit</string>
	<string name="subject_name">Subject Name</string>
	<string name="end_experiment">End Experiment</string>
	
    <!-- results -->
    <string name="results_trialNo">Trial Number</string>
    <string name="results_time_elapsed">Time Elapsed</string>
    <string name="results_results_box">Results</string>
    <string name="results_line_color">Line Color</string>
    
    <!-- connectivity -->
    <string name="dev">Dev</string>
    <string name="nexcave">NexCAVE</string>
    <string name="starcave">StarCAVE</string>
    <string name="connect_connect">Reconnect</string>
    <string name="disconnect">Disconnect</string>

</resources>
