<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:orientation="vertical"
    android:id="@+id/watermaze_control_layout" >

    <Button
        android:id="@+id/loadGeometry"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/load_geometry" />

    <Button
        android:id="@+id/nextParadigm"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:minWidth="@dimen/activity_horizontal_margin"
        android:text="@string/next_paradigm" />

    <Button
        android:id="@+id/previousParadigm"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/prev_paradigm" />

    <Button
        android:id="@+id/playPause"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:text="@string/play" />

    <Button
        android:id="@+id/startStop"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/start" />

    <Button
        android:id="@+id/nextTrial"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/next_trial" />

    <Button
        android:id="@+id/addTrial"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:text="@string/add_trial" />

</GridLayout>

