<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio_grp_connectivity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton android:id="@+id/radio_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev"/>
    <RadioButton android:id="@+id/radio_nexcave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nexcave"/>
    <RadioButton android:id="@+id/radio_starcave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starcave"/>

    <Button
        android:id="@+id/connect_connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_connect" />
    <Button
        android:id="@+id/connect_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect" />
 
</RadioGroup>